# cc-logger

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: HOOKS.md  PRIVACY.md  SCHEMA.md  TROUBLESHOOTING.md
examples/: settings-hooks.json
launchd/: com.cclogger.plist.template
migrations/: 001_initial_schema.py  002_views.py  003_messages.py  004_tokens.py
queries/: 01_session_summary.sql  02_tool_usage.sql  03_subagent_tree.sql  04_failures_breakdown.sql  05_hourly_activity.sql  06_repeat_fail_domains.sql  07_slowest_subagents.sql  08_orphaned_calls.sql  09_tool_calls_over_time.sql  10_subagent_fanout_distribution.sql  11_longest_sessions_by_prompt.sql  12_error_rates_by_tool.sql  13_tool_sequence_conformance.sql  14_compare_two_runs.sql  15_branching_points.sql
scripts/: backfill-tokens-model.py  install-hooks.py  install-launchd.sh  install-systemd.sh  install.sh  uninstall.sh
src/cc_logger/: __init__.py  app.py  artifacts.py  cli.py  db.py  filters.py  handlers.py  insights.py  inspect.py  linking.py  models.py  redaction.py  transcripts.py
systemd/: cclogger.service.template
tests/: conftest.py  harness.py  test_artifacts.py  test_filters.py  test_linking.py  test_models.py  test_redaction.py  test_redaction_known_gaps.py  test_transcripts.py
